# no-loss-pool

./: .env  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json
.github/workflows/: draw_prize.yml
api/: pool-stats.ts
api/auth/: setup-wallet.ts
back/: Cargo.toml
back/src/: lib.rs
contracts/staking-proxy/: Cargo.toml
contracts/staking-proxy/src/: lib.rs
front/: .env  index.html  package-lock.json  package.json  vite.config.ts
front/src/: config.ts
front/src/components/: language_switcher.tsx  pool_stats.tsx  staking_panel.tsx
front/src/contracts/: pool_contract.ts
src/: App.tsx  config.ts  i18n.ts  main.tsx
src/components/: AccountHeader.tsx  AuthForm.tsx  FooterWallet.tsx  InfoTooltip.tsx  LanguageSwitcher.tsx  NearPriceChart.tsx  StakingPanel.tsx  StakingStats.tsx  TopNav.tsx  TxErrorAlert.tsx  TxSuccessAlert.tsx  WalletDashboard.tsx  auth_form.tsx  footer.tsx  language_switcher.tsx  navigation.tsx  registration_form.tsx  staking_panel.tsx  top_nav.tsx  winners_history.tsx
src/contracts/: WalletDashboard.tsx  poolContract.ts  pool_contract.ts  wallet_dashboard.tsx
src/hooks/: useLanguage.ts  usePageTitle.ts  usePoolData.ts
src/pages/: AuthPage.tsx  LandingPage.tsx  NoLossPoolPage.tsx  WalletPage.tsx  about.tsx  auth.tsx  home.tsx  translations.ts
src/services/: near.ts  nearService.ts
src/styles/: app.module.css  globals.css
src/utils/: constants.ts  rpc.ts  supabaseClient.ts
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
(+29 files in other folders)
